完成了  先不做

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,4 +16,12 @@
     text-align: center;
     color: #fff;
   }
+
+  .search-form {
+    // padding: 10px 0;
+
+    .ant-form-item {
+      margin-bottom: 10px;
+    }
+  }
 }
